2018-05-13  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sdl2/sdl2_ttf.py: Added.
	* generator/generator_SDL_ttf.py: Added.

2018-03-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sdl2/sdl2*py: Added.
	* generator/generator_SDL_*.py: Added.

2018-03-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sdl2/sdl2_timer.py: Added.

2018-03-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Started