@@ -152,4 +152,5 @@
     , "SDL_vulkanInstance" : "TypeKind.POINTER"
     , "SDL_vulkanSurface" : "TypeKind.POINTER"
     , "TTF_Font" : "TypeKind.RECORD"
+    , "IMG_InitFlags" : "TypeKind.ENUM"
 }
