@@ -348,4 +348,11 @@
     , "SDL_TTF_MINOR_VERSION" : "0"
     , "SDL_TTF_PATCHLEVEL" : "14"
     , "SDL_TTF_VERSION" : null
+    , "SDL_IMAGE_H_" : null
+    , "SDL_IMAGE_MAJOR_VERSION" : "2"
+    , "SDL_IMAGE_MINOR_VERSION" : "0"
+    , "SDL_IMAGE_PATCHLEVEL" : "3"
+    , "SDL_IMAGE_VERSION" : null
+    , "SDL_IMAGE_COMPILEDVERSION" : null
+    , "SDL_IMAGE_VERSION_ATLEAST" : null
 }
