@@ -33,12 +33,13 @@ from .sdl2_shape import *
 from .sdl2_blendmode import *
 
 from .sdl2_ttf import *
+from .sdl2_image import *
 
 __author__  = 'vaiorabbit'
 __version__ = '1.0.0'
 __license__ = 'zlib'
 
-def sdl2_load(lib, output_error = False, *, ttf_libpath = None):
+def sdl2_load(lib, output_error = False, *, ttf_libpath = None, img_libpath = None):
 
     api.SDL2_LOADER = ctypes.cdll.LoadLibrary(lib)
 
@@ -96,6 +97,22 @@ def sdl2_load(lib, output_error = False, *, ttf_libpath = None):
                     func_ptr = getattr(api.SDL2_TTF_LOADER, name) # ctypes _FuncPtr
                     func_ptr.argtypes = api.SDL2_TTF_API_ARGS_MAP[name]
                     func_ptr.restype = api.SDL2_TTF_API_RETVAL_MAP[name]
+                    globals()[name] = func_ptr
+                except AttributeError:
+                    if output_error:
+                        print("Python-SDL2 : API {} not found.".format(name))
+                finally:
+                    pass
+
+    if img_libpath != None:
+        api.SDL2_IMG_LOADER = ctypes.cdll.LoadLibrary(img_libpath)
+        if api.SDL2_IMG_LOADER != None:
+            sdl2_image.setup_symbols()
+            for name in api.SDL2_IMG_API_NAMES:
+                try:
+                    func_ptr = getattr(api.SDL2_IMG_LOADER, name) # ctypes _FuncPtr
+                    func_ptr.argtypes = api.SDL2_IMG_API_ARGS_MAP[name]
+                    func_ptr.restype = api.SDL2_IMG_API_RETVAL_MAP[name]
                     globals()[name] = func_ptr
                 except AttributeError:
                     if output_error:
