@@ -1,12 +1,15 @@
 SDL2_LOADER = None
+SDL2_TTF_LOADER = None
+SDL2_IMG_LOADER = None
 
 SDL2_API_NAMES = []
 SDL2_API_ARGS_MAP = {}
 SDL2_API_RETVAL_MAP = {}
 
-SDL2_TTF_LOADER = None
-
 SDL2_TTF_API_NAMES = []
 SDL2_TTF_API_ARGS_MAP = {}
 SDL2_TTF_API_RETVAL_MAP = {}
 
+SDL2_IMG_API_NAMES = []
+SDL2_IMG_API_ARGS_MAP = {}
+SDL2_IMG_API_RETVAL_MAP = {}
